--- a/freeft/index.html
+++ b/freeft/index.html
@@ -45,7 +45,7 @@ which minimized OpenGL state changes &amp; fast tile-based sorting algorithm for
 			<a href="https://nadult.github.io/images/freeft/techdemo4a.jpg">
 				<img src="https://nadult.github.io/images/freeft/techdemo4a.jpg"/>
 			</a>
-			<p>Multiplayer mode was also implemented, based on UDP protocol. It workes nicely even under
+			<p>Multiplayer mode was also implemented, based on UDP protocol. It works smoothly even under
 stress test where 75% of packets are dropped.
 </p>
 			<br/>
