--- a/index.html
+++ b/index.html
@@ -17,6 +17,33 @@
 								<tr>
 									<td>
 										<h1 class="toc_title">
+											<a href="https://nadult.github.io/lucid">Lucid</a>
+										</h1>
+									</td>
+									<td style="align:right;">
+										<h3 style="text-align:right;">
+											<span>transparency rasterizer</span>
+											<br/>
+											<span>2021 - 2022</span>
+										</h3>
+									</td>
+								</tr>
+							</table>
+						</div>
+						<a href="https://nadult.github.io/lucid">
+							<image src="https://nadult.github.io/images/lucid/lucid2.jpg"/>
+						</a>
+						<br/>
+						<span class="toc_desc">
+		High-performence software transparency rasterizer on GPUs
+	</span>
+					</div>
+					<div>
+						<div style="overflow:hidden">
+							<table width="100%">
+								<tr>
+									<td>
+										<h1 class="toc_title">
 											<a href="https://nadult.github.io/frontier">Frontier</a>
 										</h1>
 									</td>
@@ -35,7 +62,7 @@
 						</a>
 						<br/>
 						<span class="toc_desc">
-		Engine for strategy games with a modifiable 3D terrain
+		Engine for strategy games with a modifiable 3D terrain.
 	</span>
 					</div>
 					<div>
@@ -62,8 +89,8 @@
 						</a>
 						<br/>
 						<span class="toc_desc">
-		FreeFT is an open-source, real-time, isometric action game engine
-			inspired by Fallout Tactics (tactical cRPG released in 2001).
+		Open-source, isometric action game engine inspired by
+		Fallout Tactics (tactical cRPG released in 2001).
 		The engine requires assets from the original game to run.
 	</span>
 					</div>
@@ -80,7 +107,7 @@
 										<h3 style="text-align:right;">
 											<span>WebGL demo</span>
 											<br/>
-											<span>2020 - now</span>
+											<span>2020</span>
 										</h3>
 									</td>
 								</tr>
@@ -174,7 +201,34 @@
 						</a>
 						<br/>
 						<span class="toc_desc">
-		Simple (whitted - style) real time raytracer working on CPU. Uses SIMD, BVH &amp; packet tracing.
+		Simple (whitted - style) real-time raytracer working on CPU. Uses SIMD, BVH &amp; packet tracing.
+	</span>
+					</div>
+					<div>
+						<div style="overflow:hidden">
+							<table width="100%">
+								<tr>
+									<td>
+										<h1 class="toc_title">
+											<a href="https://nadult.github.io/old_projects">Old projects</a>
+										</h1>
+									</td>
+									<td style="align:right;">
+										<h3 style="text-align:right;">
+											<span/>
+											<br/>
+											<span>2000 - 2015</span>
+										</h3>
+									</td>
+								</tr>
+							</table>
+						</div>
+						<a href="https://nadult.github.io/old_projects">
+							<image src="https://nadult.github.io/images/old_projects/cuda_particles.png"/>
+						</a>
+						<br/>
+						<span class="toc_desc">
+		Screen-shots from many different older projects of mine.
 	</span>
 					</div>
 				</div>
