--- a/lucid/index.html
+++ b/lucid/index.html
@@ -103,6 +103,13 @@
 			<br/>
 			<a href="https://learn.microsoft.com/en-us/cpp/windows/latest-supported-vc-redist?view=msvc-170"> [MSVC++ Redist 2015-2022] (Optional)</a>
 			<br/>
+			<p>More scenes:</p>
+			<a href="https://www97.zippyshare.com/v/ZkFVtKbP/file.html">[thai.7z] (111 MB)</a>
+			<br/>
+			<a href="https://www97.zippyshare.com/v/l5uKD9b8/file.html">[dragon2.7z] (72 MB)</a>
+			<br/>
+			<a href="https://www97.zippyshare.com/v/p86EBpUX/file.html">[buddha.7z] (11 MB)</a>
+			<br/>
 			<p>Running: download and unpack lucid_beta.zip and either lucid_scenes.zip or lucid_scenes.7z. In case of problems with missing dlls, make sure that MSVC++ redist is installed. Lucid should run on recent AMD &amp; NVidia GPUs (both integrated &amp; discrete GPUs). At least 2GB of VRAM is needed to run all scenes. If you have less than that, hairball, powerplant &amp; san-miguel scenes might crash the app.</p>
 			<p>Lucid demo is still in beta phase, so some bugs are expected, especially on AMD platforms, because most testing &amp; development was done on NVIDIA GPU. In case of not enough memory, application may crash or work slowly. All rasterizer options except debug_* should work. Demo was tested on RTX 3050 TI, AMD RX 6700 XT, and AMD Radeon RX Vega 8.</p>
 			<br/>
