--- a/lucid/index.html
+++ b/lucid/index.html
@@ -97,9 +97,9 @@
 			<p>Lucid rasterizer demo for windows:</p>
 			<a href="https://nadult.github.io/lucid/lucid_beta.zip">[lucid_beta.zip] (4 MB)</a>
 			<br/>
-			<a href="https://www49.zippyshare.com/v/oRtmNeKb/file.html">[lucid_scenes.zip] (341 MB)</a>
+			<a href="https://www99.zippyshare.com/v/9JoexlVB/file.html">[lucid_scenes.zip] (341 MB)</a>
 			<br/>
-			<a href="https://www49.zippyshare.com/v/eoXORzxa/file.html">[lucid_scenes.7z] (215 MB)</a>
+			<a href="https://www99.zippyshare.com/v/j0mhA6Rz/file.html">[lucid_scenes.7z] (215 MB)</a>
 			<br/>
 			<a href="https://learn.microsoft.com/en-us/cpp/windows/latest-supported-vc-redist?view=msvc-170"> [MSVC++ Redist 2015-2022] (Optional)</a>
 			<br/>
@@ -110,8 +110,8 @@
 			<br/>
 			<a href="https://www97.zippyshare.com/v/p86EBpUX/file.html">[buddha.7z] (11 MB)</a>
 			<br/>
-			<p>Running: download and unpack lucid_beta.zip and either lucid_scenes.zip or lucid_scenes.7z. In case of problems with missing dlls, make sure that MSVC++ redist is installed. Lucid should run on recent AMD &amp; NVidia GPUs (both integrated &amp; discrete GPUs). At least 2GB of VRAM is needed to run all scenes. If you have less than that, hairball, powerplant &amp; san-miguel scenes might crash the app.</p>
-			<p>Lucid demo is still in beta phase, so some bugs are expected, especially on AMD platforms, because most testing &amp; development was done on NVIDIA GPU. In case of not enough memory, application may crash or work slowly. All rasterizer options except debug_* should work. Demo was tested on RTX 3050 TI, AMD RX 6700 XT, and AMD Radeon RX Vega 8. For now Lucid will not work on Intel GPUs, that&apos;s still work in progress. Additionally, on AMD platforms Lucid might work slowly, because some drivers may have problems with Vulkan&apos;s subgroup instructions. In our tests Lucid works efficiently on Ubuntu 22.04, but on Windows 10, it&apos;s about 2x slower, on the same GPU (RX 6700 XT).</p>
+			<p>Running: download and unpack lucid_beta.zip and either lucid_scenes.zip or lucid_scenes.7z. In case of problems with missing dlls, make sure that MSVC++ redist is installed. Lucid_beta will also work without downloaded scenes, but only one simple procedurally-generated scene will be available. At least 2GB of VRAM is needed to run all scenes. If you have less than that, hairball, powerplant &amp; san-miguel scenes might crash the app.</p>
+			<p>Lucid demo is still in beta phase, so some bugs are expected, especially on AMD platforms, because most testing &amp; development was done on NVIDIA GPU. In case of not enough memory, application may crash or work slowly. All rasterizer options except debug_* should work. For now Lucid will not work on Intel GPUs, that&apos;s still work in progress. Additionally, on AMD platforms Lucid might work slowly, because (probably) some drivers may have problems with Vulkan&apos;s subgroup instructions. In our tests Lucid works efficiently on Ubuntu 22.04, but on Windows 10, it&apos;s about 2x slower (on the same GPU: RX 6700 XT).</p>
 			<br/>
 			<p>Article with algorithm description: IN PROGRESS...</p>
 			<br/>
