--- a/lucid/index.html
+++ b/lucid/index.html
@@ -31,65 +31,65 @@
 					<td>Boxes     </td>
 					<td>6K   </td>
 					<td>12M </td>
-					<td>1537 </td>
-					<td>400 </td>
-					<td>3.84</td>
+					<td>1705 </td>
+					<td>410 </td>
+					<td>4.16</td>
 				</tr>
 				<tr>
 					<td>Bunny     </td>
 					<td>72K  </td>
 					<td>740K</td>
-					<td>328  </td>
-					<td>74  </td>
-					<td>4.43</td>
+					<td>337  </td>
+					<td>77  </td>
+					<td>4.38</td>
 				</tr>
 				<tr>
 					<td>Conference</td>
 					<td>167K </td>
 					<td>5M  </td>
-					<td>1074 </td>
-					<td>240 </td>
-					<td>4.47</td>
+					<td>1103 </td>
+					<td>242 </td>
+					<td>4.56</td>
 				</tr>
 				<tr>
 					<td>Dragon    </td>
 					<td>437K </td>
 					<td>666K</td>
-					<td>813  </td>
-					<td>378 </td>
-					<td>2.15</td>
+					<td>834  </td>
+					<td>387 </td>
+					<td>2.16</td>
 				</tr>
 				<tr>
 					<td>Hairball  </td>
 					<td>1495K</td>
 					<td>22M </td>
-					<td>12129</td>
-					<td>3253</td>
-					<td>3.73</td>
+					<td>12077</td>
+					<td>3527</td>
+					<td>3.42</td>
 				</tr>
 				<tr>
 					<td>Powerplant</td>
 					<td>6400K</td>
 					<td>18M </td>
-					<td>9649</td>
-					<td>4320</td>
-					<td>2.23</td>
+					<td>9932 </td>
+					<td>4627</td>
+					<td>2.15</td>
 				</tr>
 				<tr>
 					<td>Sponza    </td>
 					<td>132K </td>
 					<td>24M </td>
-					<td>3491 </td>
-					<td>1280</td>
-					<td>2.73</td>
+					<td>3839 </td>
+					<td>1692</td>
+					<td>2.27</td>
 				</tr>
 				<tr>
 					<td>White oak </td>
 					<td>20K  </td>
 					<td>120M</td>
-					<td>12711</td>
-					<td>5667</td>
-					<td>2.24</td>
+					<td>12912</td>
+					<td>6065</td>
+					<td>2.13</td>
 				</tr>
 			</table>
 			<p align="center">Rendering times (microseconds) in 2560x1330 resolution on RTX 3050 TI.</p>
@@ -104,14 +104,14 @@
 			<a href="https://learn.microsoft.com/en-us/cpp/windows/latest-supported-vc-redist?view=msvc-170"> [MSVC++ Redist 2015-2022] (Optional)</a>
 			<br/>
 			<p>More scenes:</p>
-			<a href="https://www97.zippyshare.com/v/ZkFVtKbP/file.html">[thai.7z] (111 MB)</a>
+			<a href="https://www96.zippyshare.com/v/ScIbbWdr/file.html">[thai.7z] (111 MB)</a>
 			<br/>
-			<a href="https://www97.zippyshare.com/v/l5uKD9b8/file.html">[dragon2.7z] (72 MB)</a>
+			<a href="https://www116.zippyshare.com/v/Tz8RFtil/file.html">[dragon2.7z] (72 MB)</a>
 			<br/>
-			<a href="https://www97.zippyshare.com/v/p86EBpUX/file.html">[buddha.7z] (11 MB)</a>
+			<a href="https://www116.zippyshare.com/v/2MnJz4qm/file.html">[buddha.7z] (11 MB)</a>
 			<br/>
-			<p>Running: download and unpack lucid_beta.zip and either lucid_scenes.zip or lucid_scenes.7z. In case of problems with missing dlls, make sure that MSVC++ redist is installed. Lucid_beta will also work without downloaded scenes, but only one simple procedurally-generated scene will be available. At least 2GB of VRAM is needed to run all scenes. If you have less than that, hairball, powerplant &amp; san-miguel scenes might crash the app.</p>
-			<p>Lucid demo is still in beta phase, so some bugs are expected, especially on AMD platforms, because most testing &amp; development was done on NVIDIA GPU. In case of not enough memory, application may crash or work slowly. All rasterizer options except debug_* should work. For now Lucid will not work on Intel GPUs, that&apos;s still work in progress. Additionally, on AMD platforms Lucid might work slowly, because (probably) some drivers may have problems with Vulkan&apos;s subgroup instructions. In our tests Lucid works efficiently on Ubuntu 22.04, but on Windows 10, it&apos;s about 2x slower (on the same GPU: RX 6700 XT).</p>
+			<p>Running: download and unpack lucid_beta.zip and either lucid_scenes.zip or lucid_scenes.7z. In case of problems with missing dlls, make sure that MSVC++ redist is installed. Lucid_beta will also work without downloaded scenes, but only one simple procedurally-generated scene will be available.</p>
+			<p>Lucid rasterizer demo is still work in progress, so some bugs are expected. Testing &amp; development was mainly done on NVIDIA GPU (GTX 3050 Ti). All rasterizer options except debug_* should work. For now Lucid will not work on Intel GPUs, and on AMD GPUs on Windows it might work slowly. It seems that AMD drivers for windows don&apos;t support Vulkan&apos;s subgroup instructions as well as the linux driver. In our tests on a computer with RX 6700 XT, Lucid works efficiently on Ubuntu 22.04, but on Windows 10, it&apos;s about 2x-3x slower.</p>
 			<br/>
 			<p>Article with algorithm description: IN PROGRESS...</p>
 			<br/>
