Updated lucid links

--- a/lucid/index.html
+++ b/lucid/index.html
@@ -105,22 +105,22 @@
 			<p align="center">Rendering times (microseconds) in 2560x1330 resolution on RTX 3050 TI.</p>
 			<br/>
 			<p>LucidRaster demo for windows:</p>
-			<a href="https://nadult.github.io/lucid/lucid_beta.zip">[lucid_beta.zip] (4 MB)</a>
+			<a href="https://github.com/nadult/lucid/releases/download/v0.1/lucid_beta_windows.zip">[lucid_beta_windows.zip] (5 MB)</a>
 			<br/>
-			<a href="https://www99.zippyshare.com/v/9JoexlVB/file.html">[lucid_scenes.zip] (341 MB)</a>
+			<a href="https://github.com/nadult/lucid/releases/download/v0.1/scenes.zip">[scenes.zip] (336 MB)</a>
 			<br/>
-			<a href="https://www99.zippyshare.com/v/j0mhA6Rz/file.html">[lucid_scenes.7z] (215 MB)</a>
+			<a href="https://github.com/nadult/lucid/releases/download/v0.1/scenes.7z">[scenes.7z] (221 MB)</a>
 			<br/>
 			<a href="https://learn.microsoft.com/en-us/cpp/windows/latest-supported-vc-redist?view=msvc-170"> [MSVC++ Redist 2015-2022] (Optional)</a>
 			<br/>
 			<p>More scenes:</p>
-			<a href="https://www96.zippyshare.com/v/ScIbbWdr/file.html">[thai.7z] (111 MB)</a>
+			<a href="https://github.com/nadult/lucid/releases/download/v0.1/thai.7z">[thai.7z] (97 MB)</a>
 			<br/>
-			<a href="https://www116.zippyshare.com/v/Tz8RFtil/file.html">[dragon2.7z] (72 MB)</a>
+			<a href="https://github.com/nadult/lucid/releases/download/v0.1/dragon2.7z">[dragon2.7z] (68 MB)</a>
 			<br/>
-			<a href="https://www116.zippyshare.com/v/2MnJz4qm/file.html">[buddha.7z] (11 MB)</a>
+			<a href="https://github.com/nadult/lucid/releases/download/v0.1/buddha.7z">[buddha.7z] (9 MB)</a>
 			<br/>
-			<p>Running: download and unpack lucid_beta.zip and either lucid_scenes.zip or lucid_scenes.7z. In case of problems with missing dlls, make sure that MSVC++ redist is installed. Lucid_beta will also work without downloaded scenes, but only one simple procedurally-generated scene will be available.</p>
+			<p>Running: download and unpack lucid_beta.zip and either scenes.zip or scenes.7z. In case of problems with missing dlls, make sure that MSVC++ redist is installed. Lucid_beta will also work without downloaded scenes, but only three simple scenes will be available.</p>
 			<p>LucidRaster demo is still work in progress, so some bugs are expected. Testing &amp; development was mainly done on NVIDIA GPU (GTX 3050 Ti). All rasterizer options except debug_* should work. For now LucidRaster will not work on Intel GPUs, and on AMD GPUs on Windows it might work slowly. It seems that AMD drivers for windows don&apos;t support Vulkan&apos;s subgroup instructions as well as the linux driver. In our tests on a computer with RX 6700 XT, LucidRaster works efficiently on Ubuntu 22.04, but on Windows 10, it&apos;s about 2x-3x slower.</p>
 			<br/>
 			<br/>
