Updated paper link

--- a/lucid/index.html
+++ b/lucid/index.html
@@ -15,7 +15,7 @@
 			<p>LucidRaster is a software rasterizer running on a gpu designed specifically to support efficient order independent transparency. Most of LucidRaster logic is implemented in Vulkan compute shaders.</p>
 			<a href="https://github.com/nadult/lucid">[GITHUB LINK]</a>
 			<br/>
-			<a href="https://nadult.github.io/lucid/paper_draft.html">[PAPER DRAFT]</a>
+			<a href="https://arxiv.org/abs/2405.13364">[PAPER]</a>
 			<br/>
 			<p>Lucid rasterizer is quite efficient: it&apos;s faster than high-quality approximations like Moment-based OIT and it&apos;s exact. On average it takes only 3x as much time as (unordered) hardware alpha-blending. For scenes with lots of tiny triangles it can even be faster than hardware.
 </p>
